# ics-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/handoff/: handoff-20260505-1507.md  handoff-20260505-1538.md
docs/superpowers/plans/: 2026-05-05-ics-cli-b0.md  2026-05-05-ics-cli-b1.md  2026-05-05-ics-cli-b2.md  2026-05-05-ics-cli-c.md  2026-05-05-obsidian-ics-plugin-p0.md
docs/superpowers/specs/: 2026-05-05-obsidian-ics-plugin-design.md  2026-05-05-obsidian-ics-plugin-spec.md  2026-05-06-ics-cli-design.md
docs/wiki/: 01-overview.md  02-installation.md  03-local-workflow.md  04-stratum-login-and-push.md  05-pull.md  06-proposals.md  07-vault.md  08-configuration.md  09-storage-layout.md  10-troubleshooting.md  README.md
src/: auth_store.rs  commit.rs  config.rs  error.rs  frontmatter.rs  identity.rs  lib.rs  main.rs  objects.rs  path_safety.rs  paths.rs  repo.rs  store.rs  worktree.rs
src/commands/: checkout.rs  commit.rs  diff.rs  init.rs  log.rs  login.rs  mod.rs  proposal.rs  pull.rs  push.rs  status.rs  vault.rs
src/stratum/: client.rs  errors.rs  mod.rs  routes.rs  vault_client.rs
src/sync/: mod.rs  pull.rs
tests/: cli_checkout.rs  cli_flow.rs  cli_smoke.rs  stratum_client.rs  vault_client.rs
tests/fixtures/: stratum-openapi.json
