[package]
name = "ics-cli"
version = "0.1.0"
edition = "2021"
description = "Local markdown workspace with git-like history + Stratum ICS"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
directories = "5"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "2"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[[bin]]
name = "ics"
path = "src/main.rs"
